some change to view side

--- a/views/EmailConfirmation.ejs
+++ b/views/EmailConfirmation.ejs
@@ -13,7 +13,9 @@
     />
   </head>
   <body>
+    <!-- CODIGO PARA PERSONALIZAR -->
     <h1>Confirmacion de correo electronico</h1>
     <h3><%= confirmationMessage %></h3>
+    <!-- CODIGO PARA PERSONALIZAR -->
   </body>
 </html>
