--- a/views/SignIn.ejs
+++ b/views/SignIn.ejs
@@ -13,37 +13,34 @@
     />
   </head>
   <body>
-    <h1>Biblo Sig in</h1>
+    
+    <!-- CODIGO PARA PERSONALIZAR -->
+    <form method="POST" action="/SignIn" class="d-block mx-auto w-25 d-flex justify-content-center flex-column align-items-center">
+      <h1 class="text-center m-3">Biblo Sig in</h1>
 
-    <form method="POST" action="/SignIn">
+      <% if( typeof userFound !== 'undefined' && emailConfirmation !== 'undefined') { %>
+        <div>
+          <% if( userFound === false ) {%>
+            <p class="alert alert-danger" role="alert"><%= "Usuario no encontrado, por favor verifique los datos" %></p>
+          <% } %>
+        </div>
+  
+        <div>
+          <% if( userFound === true && emailConfirmation === false ) {%>
+            <p class="alert alert-danger" role="alert"><%= "El usuario aun no ha confirmado su correo electronico, no puede continuar" %></p>
+          <% } %>
+        </div>
+      <% } %>
+
       <label for="userName">Nombre de usuario:</label>
-      <input type="text" id="userName" name="userName" />
+      <input type="text" id="userName" name="userName" class="form form-control m-3 <%= (typeof inputValid !== 'undefined' ? inputValid : '' ) %>" />
 
       <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" />
+      <input type="password" id="password" name="password" class="form form-control m-3 <%= (typeof inputValid !== 'undefined' ? inputValid : '' ) %>" />
 
-      <button type="submit">Iniciar sesion</button>
+      <button type="submit" class="btn btn-primary m-3">Iniciar sesion</button>
     </form>
-
-    <% if( typeof userFound !== 'undefined' && emailConfirmation !== 'undefined') { %>
-      <div>
-        <% if( userFound === false ) {%>
-          <p><%= "Usuario no encontrado, por favor verifique los datos" %></p>
-        <% } %>
-      </div>
-
-      <div>
-        <% if( userFound === true && emailConfirmation === false ) {%>
-          <p><%= "El usuario aun no ha confirmado su correo electronico, no puede continuar" %></p>
-        <% } %>
-      </div>
-
-      <div>
-        <% if( userFound === true && emailConfirmation === true ) {%>
-          <p><%= "Todos los datos del usuario estan correctos, puede continuar" %></p>
-        <% } %>
-      </div>
-    <% } %>
+    <!-- CODIGO PARA PERSONALIZAR -->
 
     <script>
       window.history.replaceState({ page: 'home' }, 'Home', '/');
@@ -52,7 +49,7 @@
 
       window.addEventListener('popstate', (event) => {
         if (event.state && event.state.page === 'error') {
-          window.location.href = '/';
+          window.location.href = '/SignIn';
         }
       });
     </script>
