--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -13,6 +13,7 @@
     />
   </head>
   <body>
+    <!-- CODIGO PARA PERSONALIZAR -->
     <form method="POST" action="/guardar-datos">
       <label for="nombre">Nombre:</label>
       <input type="text" id="nombre" name="nombre" />
@@ -28,5 +29,6 @@
 
       <button type="submit">Guardar</button>
     </form>
+    <!-- CODIGO PARA PERSONALIZAR -->
   </body>
 </html>
