--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -19,7 +19,7 @@
       <input type="text" id="nombre" name="nombre" />
 
       <label for="correo">Correo:</label>
-      <input type="text" id="correo" name="correo" />
+      <input type="email" id="correo" name="correo" />
 
       <label for="userName">Nombre de usuario:</label>
       <input type="text" id="userName" name="userName" />
