Se Agragaron Nuevas Funciones a las Vistas

--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -28,6 +28,7 @@
       <input type="password" id="password" name="password" />
 
       <button type="submit">Guardar</button>
+      <a href="/SignIn" class="m-3">Iniciar Sesion</a>
     </form>
     <!-- CODIGO PARA PERSONALIZAR -->
   </body>
