--- a/views/SignIn.ejs
+++ b/views/SignIn.ejs
@@ -39,7 +39,9 @@
       <input type="password" id="password" name="password" class="form form-control m-3 <%= (typeof inputValid !== 'undefined' ? inputValid : '' ) %>" />
 
       <button type="submit" class="btn btn-primary m-3">Iniciar sesion</button>
+      <a href="/Register" class="m-3">Crear Nueva Cuenta</a>
     </form>
+  
     <!-- CODIGO PARA PERSONALIZAR -->
 
     <script>
